# recruiting-pipeline

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cron/: README.md
cron/scripts/: local_status_digest.sh
docs/: FUTURE.md  getting-started.md  overview.md  security.md  versioning.md
examples/: config.toml
integrations/hermes/: mcp.example.yaml
integrations/hermes/plugins/erga-mcp-router/: __init__.py  after-install.md  plugin.yaml
integrations/hermes/plugins/recruiting-pipeline-router/: __init__.py  after-install.md  plugin.yaml
skills/productivity/erga-mcp/: SKILL.md
src/erga_mcp/: __init__.py  classification.py  cli.py  config.py  contact_projection.py  cron_setup.py  doctor.py  exporting.py  job_intake.py  job_research.py  job_workspace.py  mail_settings.py  mcp_server.py  models.py  recruiter_contacts.py  reporting.py  resume.py  resume_settings.py  store.py  tracker_view.py  zoho_oauth.py
src/erga_mcp/integrations/: __init__.py  gmail_live.py  obsidian_tracker.py  zoho.py  zoho_live.py
src/recruiting_pipeline/: classification.py  cli.py  config.py  doctor.py  job_intake.py  job_research.py  mcp_server.py  models.py  resume.py  resume_settings.py  resume_tailoring.py  store.py  zoho_oauth.py
src/recruiting_pipeline/integrations/: gmail_live.py  obsidian.py  obsidian_tracker.py  zoho.py  zoho_live.py
tests/: test_classification.py  test_cli.py  test_cli_workflows.py  test_config.py  test_contact_projection.py  test_cron_setup.py  test_doctor.py  test_exporting.py  test_gmail_live.py  test_hermes_job_url_router.py  test_job_intake.py  test_job_research.py  test_job_workspace.py  test_live_zoho_sync.py  test_mail_settings_cli.py  test_mail_sync.py  test_mail_sync_mcp.py  test_mcp_server.py  test_mcp_stdio.py  test_obsidian.py  test_obsidian_cli.py  test_obsidian_tracker.py  test_reporting.py  test_resume.py  test_resume_cli.py  test_resume_editor.py  test_resume_package.py  test_resume_settings_cli.py  test_resume_tailoring.py  test_resume_validation.py  test_store.py  test_tracker_mcp.py  test_tracker_view.py  test_zoho_cli.py  test_zoho_fixture.py  test_zoho_oauth.py  test_zoho_scopes.py
tests/fixtures/: zoho_messages.json
