[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "recruiting-pipeline"
version = "0.1.0"
description = "A local-first recruiting workflow toolkit for Hermes and other MCP clients."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Recruiting Pipeline contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business",
]
dependencies = ["keyring>=25,<26", "pypdf>=5,<7"]

[project.optional-dependencies]
mcp = ["mcp>=1.28,<2"]
dev = ["mypy>=1.14", "ruff>=0.9"]

[project.scripts]
recruiting-pipeline = "recruiting_pipeline.cli:main"
recruiting-pipeline-mcp = "recruiting_pipeline.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/recruiting_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
source = ["recruiting_pipeline"]
