[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "erga-mcp"
version = "0.1.0"
description = "Organize job applications and tailor LaTeX resumes from the CLI or an MCP client."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Erga MCP contributors" }]
keywords = ["career", "local-first", "mcp", "recruiting", "resume"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Office/Business",
]
dependencies = ["keyring>=25,<26", "pypdf>=5,<7"]

[project.urls]
Homepage = "https://github.com/Adr1an04/erga-mcp"
Documentation = "https://github.com/Adr1an04/erga-mcp/tree/main/docs"
Issues = "https://github.com/Adr1an04/erga-mcp/issues"
Repository = "https://github.com/Adr1an04/erga-mcp.git"

[project.optional-dependencies]
mcp = ["mcp>=1.28,<2"]
dev = ["mypy>=1.14", "ruff>=0.9"]

[project.scripts]
erga = "erga_mcp.cli:main"
erga-tokens = "erga_mcp.cli:tokens_main"
erga-mcp = "erga_mcp.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/erga_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
source = ["erga_mcp"]
